competitions/middle-school-teaser-2021/ctfd-kube/ctfd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctfd-svc
  namespace: challenges
  labels:
    app: ctfd
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: ctfd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd-svc
  namespace: challenges
  labels:
    app: ctfd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd
  template:
    metadata:
      labels:
        app: ctfd
    spec:
      volumes:
      - name: ctfd-pv-uploads
        persistentVolumeClaim:
          claimName: ctfd-pv-uploads-claim
      - name: ctfd-pv-logs
        persistentVolumeClaim:
          claimName: ctfd-pv-logs-claim
      containers:
      - name: ctfd
        image: ghcr.io/vgcs/mcps-ctfd:latest
        volumeMounts:
        - name: ctfd-pv-uploads
          mountPath: /var/uploads
        - name: ctfd-pv-logs
          mountPath: /var/log/CTFd
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
